<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.PaidIncomeTaxRefundStatusFragment">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
        android:id="@+id/text_IncomeTaxRefundStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/text_IncomeTaxRefundStatus"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text_ParmanentAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/text_ParmanentAccountNumber"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_IncomeTaxRefundStatus"

        />
    <EditText
        android:id="@+id/edt_ParmanentAccountNumber"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/general_edt_box"
        android:ems="10"
        android:maxLength="50"
        android:textStyle="bold"
        android:hint="@string/edt_ParmanentAccountNumber"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_large"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ParmanentAccountNumber" />
    <TextView
        android:id="@+id/text_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_EmailAdd"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ParmanentAccountNumber" />
    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_edt_box"
        android:ems="10"
        android:hint="@string/edt_EmailAdd"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:padding="@dimen/margin_large"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Email" />
    <TextView
        android:id="@+id/text_AcknowledgementNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_AcknowledgementNumber"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Email" />
    <EditText
        android:id="@+id/edt_AcknowledgementNumber"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_edt_box"
        android:ems="10"
        android:hint="@string/edt_AcknowledgementNumber"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:padding="@dimen/margin_large"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_AcknowledgementNumber" />
    <TextView
        android:id="@+id/text_Assessmentyear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_Assessmentyear"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_AcknowledgementNumber" />
    <EditText
        android:id="@+id/edt_Assessmentyear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_edt_box"
        android:ems="10"
        android:hint="@string/edt_Assessmentyear"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:padding="@dimen/margin_large"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Assessmentyear" />
    <TextView
        android:id="@+id/text_text_showmeRefundStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_year"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginRight="@dimen/larger_text_size"
        android:layout_marginLeft="@dimen/larger_text_size"
        android:text="@string/text_showmeRefundStatus"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Assessmentyear" />
    <TextView
        android:id="@+id/text_checkYourIncomeTax"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/smaller_text_size"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/text_checkYourIncomeTax"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_text_showmeRefundStatus" />

    <TextView
        android:id="@+id/text_IncomeTaxDepartmentSay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_IncomeTaxDepartmentSay"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_checkYourIncomeTax" />
    <TextView
        android:id="@+id/text_IncomeTaxDepartmentSayValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_IncomeTax"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_IncomeTaxDepartmentSay" />
    <TextView
        android:id="@+id/text_PleaseNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_PleaseNote"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_IncomeTaxDepartmentSayValues" />
    <TextView
        android:id="@+id/text_PleaseNoteVlaues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_PleaseNoteVlaues"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_PleaseNote" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/larger_text_size"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@+id/text_PleaseNoteVlaues"/>
    <TextView
        android:id="@+id/text_socilathink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:text="@string/text_socilathink"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>