<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".Fragment.PaidUserChangePassFragment">

    <TextView
        android:id="@+id/text_OldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OldPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edt_OldPassword"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edt_text"
        android:ems="10"
        android:maxLength="50"
        android:textStyle="bold"
        android:hint="@string/edt_OldPassword"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_large"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_OldPassword" />
    <TextView
        android:id="@+id/text_NewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="@dimen/font_large"
        android:text="@string/text_NewPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_OldPassword" />
    <EditText
        android:id="@+id/edt_NewPassword"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edt_text"
        android:ems="10"
        android:maxLength="50"
        android:textStyle="bold"
        android:hint="@string/edt_NewPassword"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_large"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_NewPassword" />
    <TextView
        android:id="@+id/text_ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="@dimen/font_large"
        android:text="@string/text_ConfirmPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_NewPassword" />
    <EditText
        android:id="@+id/edt_onfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edt_text"
        android:ems="10"
        android:maxLength="50"
        android:textStyle="bold"
        android:hint="@string/edt_onfirmPassword"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_large"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ConfirmPassword" />
    <Button
        android:id="@+id/button_profileSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/common_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_onfirmPassword" />




</androidx.constraintlayout.widget.ConstraintLayout>